made some updates

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     	<meta charset="utf-8">
     	<meta name="description" content="Landing page of ">
     	<meta name="keywords" content="one, two, three">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<title>Visionary Hub</title>
 
